Modified the way the common code gets linked in
Signed-off-by: Kevin Mahoney <kevin.mahoney@zenotec.net>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = netlink nl80211
 
-lib_LTLIBRARIES = libwcap.la
+noinst_LTLIBRARIES = libwcap.la
 
 # Where to install the headers on the system
 libwcap_ladir = $(includedir)/zutils
